# ehrlichgpt

./: .dockerignore  .env.dist  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent_tester.py  bing_search.py  bing_tester.py  conversation.py  docker-compose.yml  document_index.py  embedding_tester.py  main.py  memory.py  memory_retriever.py  message.py  pyproject.toml  repository.py  requirements.txt  setup.sh  utils.py  web_extractor.py  web_searcher.py
model/: web_result.py
